Create-EC2-with-ALB/security.tf
#Create a security group
resource "aws_security_group" "sg1" {
  vpc_id      = aws_vpc.myvpc.id
  name        = "my-sg1"
  description = "Allow HTTP & SSH traffic"
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
